# amop

./: BasicUsage.md  BuildInstructions.md  GeneralDiscussion.md  History.md  ProjectHome.md
amop/: CMakeLists.txt  ReadMe.txt
amop/doc/: Doxyfile  header.html  mainpage.dox
amop/doc/html/: _comparable_8h-source.html  _config_8h-source.html  _destructor_8h-source.html  _dynamic_function_8h-source.html  _exception_thrower_8h-source.html  _fast_delegate_bind_8h-source.html  _functor_8h-source.html  _macro_misc_8h-source.html  _macro_repeat_8h-source.html  _mock_function_8h-source.html  _policy_8h-source.html  _virtual_table_8h-source.html  classamop_1_1_detail_1_1_t_return_match_builder_3_01_f_00_01_detail_1_1_t_call_policy_01_4-members.html  classamop_1_1_detail_1_1_t_return_match_builder_3_01_f_00_01_detail_1_1_t_every_call_policy_01_4-members.html  classamop_1_1_detail_1_1_t_return_match_builder_3_01_f_00_01_detail_1_1_t_query_policy_01_4-members.html  classamop_1_1_mock_object-members.html  classamop_1_1_mock_object.html  classamop_1_1_t_mock_object.html  classamop_1_1detail_1_1_return_match_builder_3_01_f_00_01detail_1_1_call_policy_01_4.html  classamop_1_1detail_1_1_return_match_builder_3_01_f_00_01detail_1_1_every_call_policy_01_4-members.html  classamop_1_1detail_1_1_return_match_builder_3_01_f_00_01detail_1_1_every_call_policy_01_4.html  classamop_1_1detail_1_1_return_match_builder_3_01_f_00_01detail_1_1_query_policy_01_4-members.html  classamop_1_1detail_1_1_return_match_builder_3_01_f_00_01detail_1_1_query_policy_01_4.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html
amop/include/: Any.h  CallHandler.h  Comparable.h  Config.h  Destructor.h  DynamicFunction.h  DynamicObject.h  FastDelegateBind.h  FunctionHolder.h  Functor.h  MockFunction.h  MockFunctionImpl.h  MockObject.h  MockObjectBase.h  MockObjectException.h  ObjectHolder.h  Policy.h  ReturnMatchBuilder.h  Tuple.h  VirtualTable.h
amop/source/: AMOP.vcproj  AMOP_2003.vcproj  CMakeLists.txt  CallHandler.h  CheckOffsetFunc.cpp  CheckOffsetFunc.h  Comparable.h  Config.h  DynamicFunction.cpp  DynamicFunction.h  DynamicObject.cpp  DynamicObject.h  ExceptionThrower.h  ExpectsMaker.h  FastDelegate.h  FunctionHolder.h  Functor.h  MacroMisc.h  MockFunction.h  MockFunctionImpl.cpp  MockFunctionImpl.h  MockObject++.vcproj  MockObject.h  MockObjectBase.cpp  MockObjectBase.h  MockObjectException.h  ObjectHolder.h  ReturnMatchBuilder.h  VirtualTable.cpp  VirtualTable.h  makefile
amop/source/Test/: CMakeLists.txt  Main.cpp  TestAMOP.vcproj  TestAMOP_2003.vcproj  TestMockObject.cpp  TestTemplateHelppers.cpp  TestVirtualFunctionRedirect.cpp
trunk/amop/: CMakeLists.txt
trunk/amop/doc/: Doxyfile  amop.css  mainpage.dox
trunk/amop/include/: Any.h  CallHandler.h  CheckOffsetFunc.h  Comparable.h  Config.h  Destructor.h  Functor.h  (+16 more)
trunk/amop/source/: AMOP.sln  AMOP.vcproj  AMOP_2003.vcproj  CMakeLists.txt  CallHandler.h  CheckOffsetFunc.cpp  CheckOffsetFunc.h  Comparable.h  Config.h  Destructor.h  DynamicFunction.cpp  ExpectsMaker.h  MacroCounter.h  MacroRepeat.h  MockFunctionImpl.cpp  MockFunctionImpl.h  MockObject++.vcproj  MockObject.h  MockObjectBase.cpp  MockObjectBase.h  MockObjectException.h  ObjectHolder.h  ReturnMatchBuilder.h  deploy.bat  makefile
trunk/amop/source/Test/: CMakeLists.txt  Main.cpp  TestAMOP.vcproj  TestAMOP_2003.vcproj  TestMockObject.cpp  TestTemplateHelppers.cpp  TestVirtualFunctionRedirect.cpp
wiki/: BasicUsage.wiki  BuildInstructions.wiki  GeneralDiscussion.wiki  History.wiki  TodoList.wiki
(+77 files in other folders)
